# RAG_Learning

./: README.md
corrective-rag/: .env.example  .gitignore  README.md  pyproject.toml  requirements-eval.txt  requirements.txt
corrective-rag/data/corpus/: lending_policy.md  loan_products.md  servicing_runbook.md
corrective-rag/docs/: ARCHITECTURE.md  PRD.md
corrective-rag/docs/rules/: langgraph-patterns.md  python.md  rag-best-practices.md
corrective-rag/eval/: eval_set.jsonl  run_eval.py
corrective-rag/scripts/: smoke_test.py
corrective-rag/src/crag/: __init__.py  cli.py  config.py  graph.py  ingest.py  llm.py  state.py
corrective-rag/src/crag/nodes/: __init__.py  generate.py  grade.py  retrieve.py  transform_query.py  web_search.py
corrective-rag/tests/: conftest.py  test_decide.py  test_generate.py  test_grade.py  test_graph.py  test_ingest.py  test_state.py  test_web_search.py
experience-copilot/: .env.example  .gitignore  README.md  app.py  pyproject.toml  pytest.ini  requirements.txt
experience-copilot/data/corpus/: README.md
experience-copilot/profile/: persona.example.md  style_examples.example.md
experience-copilot/scripts/: probe_models.py
experience-copilot/src/copilot/: __init__.py  answer.py  cli.py  config.py  engine.py  ingest.py  llm.py  suggest.py
experience-copilot/tests/: conftest.py  test_answer.py  test_engine.py  test_ingest.py  test_suggest.py
