[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "corrective-rag"
version = "0.1.0"
description = "Corrective RAG (CRAG) as a LangGraph state machine"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crag = "crag.cli:main"
